[tool.poetry]
name = "successoroptions2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
gym = "^0.21.0"
numpy = "^1.21.4"
scipy = "^1.7.3"
scikit-learn = "^1.0.1"
matplotlib = "^3.5.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
